# granular-drums

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: AnalysisEngine.cpp  AnalysisEngine.h  GranularSynth.cpp  GranularSynth.h  HPSSProcessor.cpp  HPSSProcessor.h  MackityProcessor.h  OnsetVotingEngine.cpp  OnsetVotingEngine.h  PadPlaybackEngine.cpp  PadPlaybackEngine.h  RegionAnalysisEngine.cpp  RegionAnalysisEngine.h
Source/UI/: GranularDrumsLookAndFeel.cpp  GranularDrumsLookAndFeel.h  MainWaveformDisplay.cpp  MainWaveformDisplay.h  PadGridComponent.cpp  PadGridComponent.h  SequencerGridComponent.cpp  SequencerGridComponent.h
